--- a/main.html
+++ b/main.html
@@ -5,8 +5,18 @@
     <title>Terminal/Git/Github Demo</title>
   </head>
   <body>
-    <p>
-      This page should include the Disappearing Ninja assignment.  You should add the html and css first then commit. Then add the jQuery and commit again.
-    </p>
+    
+    <img src="tiedye.jpg" alt="">
+    <img src="tiedye.jpg" alt="">
+    <img src="tiedye.jpg" alt="">
+    <img src="tiedye.jpg" alt="">
+    <br>
+    <img src="tiedye.jpg" alt="">
+    <img src="tiedye.jpg" alt="">
+    <img src="tiedye.jpg" alt="">
+    <img src="tiedye.jpg" alt="">
+    <br>
+
+    <button type="button" name="button">Restore</button>
   </body>
 </html>
