--- a/main.html
+++ b/main.html
@@ -3,9 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Terminal/Git/Github Demo</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+          $('img').click(function(){
+            $(this).hide();
+          })
+          $('button').click(function(){
+            $('img').show();
+          })
+        });
+    </script>
   </head>
   <body>
-    
+
     <img src="tiedye.jpg" alt="">
     <img src="tiedye.jpg" alt="">
     <img src="tiedye.jpg" alt="">
